# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
.cargo/: config.toml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230206161716_create_subscriptions_table.sql  20230219001300_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh  install_mold.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
